#1 Added the spline to the return for the animation. Compiled backend with new structure.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ PathfinderPrototype/obj/
 PathfinderPrototype/PathfinderPrototype.userprefs
 PathfinderPrototype/Assets/Plugins/*.meta
 PathfinderPrototype/.vs/
+*.exp
+*.ilk
+*.lib
+*.pdb
